2010-12-01  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #16622: PageTree - Milestone 2 Release (Thanks to Stefan Galinski + Peter Foerger)
	* Fixed bug #16621: Stabilize the Context Menu API (Thanks to Stefan Galinski)
	* Fixed bug #16463: Bug: Custom configured modules can't be enabled for non-admins (Thanks to Bastian Waidelich)
	* Fixed bug #16091: ExtDirect calls get cached with domain resulting in "unable to connect to the server" exceptions (Thanks to Andreas Kiessling)

2010-12-01  Xavier Perseguers  <typo3@perseguers.ch>

	* Raised DBAL to version 1.2.0beta2

2010-12-01  Jigal van Hemert  <jigal@xs4all.nl>

	* Fixed bug #16591 The new Swift Mailer should be used by TYPO3 for sending all kinds of mail

2010-12-01  Steffen Ritter  <typo3@steffen-ritter.net>

	* Fixed Bug #16613: CleanUp alt_db_navframe.php to work with new workspaces module

2010-12-01  Sebastian Kurfuerst  <sebastian@typo3.org>

	* Updated Extbase and Fluid to 1.3.0beta2. See their ChangeLogs for details.

2010-12-01  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #16058: htmlArea RTE: Overlay to choose a color exceeds the viewport if many colors are defined
	* Updated htmlArea RTE version to 2.1.4

2010-12-01  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #16625: TCEforms have surrounding box with background color

2010-12-01  Oliver Hader  <oliver@typo3.org>

	* Updated Workspaces and Version extension to version 4.5.0beta2. See their ChangeLog for details.
	* Fixed bug #16604: Changes in workspace are not shown automatically in pagetree
	* Updated Workspaces extension to version 4.5.0beta2a. See their ChangeLog for details.

2010-11-30  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #16501: DBAL does not support multi-column indexes in create table queries
	* Fixed bug #16491: Provide a pass-through flag for sql_exec() which goes directly to the native MySQL engine

2010-11-30  Tolleiv Nietsch  <typo3@tolleiv.de>
